Fixed overspill with images in Cigar Journey section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ ol {
 }
 
 .journey-img {
-    width: 500px;
+    width: 50%;
     height: auto;
     position: relative;
     border-radius: 50%;
